--- a/index.html
+++ b/index.html
@@ -8,52 +8,26 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!-- -----------Фоны------------- -->
+    <!-- -----------Фони------------- -->
     <!-- <p class="bg">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi debitis
       odio quia error iste vel perspiciatis aut voluptate earum non corrupti,
       rem fuga cupiditate laboriosam, ducimus, vitae quod expedita repudiandae!
     </p> -->
 
-    <!-- -----------наложение фонов------------- -->
+    <!-- -----------комбінація фонов------------- -->
     <!-- <div class="savanna">cwdcwevwe</div> -->
 
     <div class="container">
       <!-- ----------------градиент---------------- -->
       <div class="linear"></div>
-      <ul class="net-list">
-        <li class="net-item">
-          <a href="" class="net-link">
-            <svg class="net-icon" width="20" height="20">
-              <use href="./img/icons.svg#icon-instagram"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="net-item">
-          <a href="" class="net-link">
-            <svg class="net-icon">
-              <use href=""></use>
-            </svg>
-          </a>
-        </li>
-        <li class="net-item"><a href="" class="net-link"></a></li>
-        <li class="net-item"><a href="" class="net-link"></a></li>
-      </ul>
+
       <div class="radial"></div>
-      <ul class="clients-list">
-        <li class="clients-item">
-          <a href="" class="clients-link">
-            <svg class="clients-icon" width="50" height="50">
-              <use href="./img/icons.svg#icon-twitter"></use></svg
-          ></a>
-        </li>
-        <li class="clients-item"><a href="" class="clients-link"></a></li>
-        <li class="clients-item"><a href="" class="clients-link"></a></li>
-      </ul>
+
       <!-- -----------------Тени------------ -->
 
-      <!-- <div class="box">dewffefgeqrge</div> -->
-      <!-- <div class="box1"></div> -->
+      <div class="box">dewffefgeqrge</div>
+      <div class="box1"></div>
 
       <!-- <button class="btn">Кнопка</button> -->
 
