--- a/index.html
+++ b/index.html
@@ -15,35 +15,19 @@
       rem fuga cupiditate laboriosam, ducimus, vitae quod expedita repudiandae!
     </p> -->
 
-    <!-- -----------комбінація фонов------------- -->
+    <!-- -----------комбінація фонів------------- -->
     <!-- <div class="savanna">cwdcwevwe</div> -->
 
     <div class="container">
-      <!-- ----------------градиент---------------- -->
-      <div class="linear"></div>
+      <!-- ----------------градієнт---------------- -->
+      <!-- <div class="linear"></div>
 
-      <div class="radial"></div>
+      <div class="radial"></div> -->
 
-      <!-- -----------------Тени------------ -->
+      <!-- -----------------Тіні------------ -->
 
       <div class="box">dewffefgeqrge</div>
-      <div class="box1"></div>
-
-      <!-- <button class="btn">Кнопка</button> -->
-
-      <!-- -----------------псевдо------------------- -->
-      <!-- <h2 class="title">Lorem ipsum dolor sit amet</h2> -->
-      <!-- <p class="text">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Aspernatur, asperiores atque, dignissimos dicta delectus sit
-                commodi esse debitis est in porro quas temporibus. Reprehenderit
-                non libero adipisci aut. Magnam, facilis!
-            </p> -->
-      <!-- <div class="square">dwd</div>
-      <div class="circle">dsad</div>
-      <div class="ellipse">das</div>
-      <div class="radius">dasd</div>
-      <div class="triangle"></div> -->
+      <!-- <div class="box1"></div> -->
     </div>
   </body>
 </html>
