--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   </head>
   <body>
     <!-- -----------Фони------------- -->
-    <p class="bg">
+    <!-- <p class="bg">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi debitis
       odio quia error iste vel perspiciatis aut voluptate earum non corrupti,
       rem fuga cupiditate laboriosam, ducimus, vitae quod expedita repudiandae!
-    </p>
+    </p> -->
 
     <!-- -----------комбінація фонів------------- -->
     <!-- <div class="savanna">cwdcwevwe</div> -->
@@ -26,7 +26,7 @@
 
       <!-- -----------------Тіні------------ -->
 
-      <!-- <div class="box">dewffefgeqrge</div> -->
+      <div class="box">dewffefgeqrge</div>
       <!-- <div class="box1"></div> -->
     </div>
   </body>
